; ModuleID = '/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_usec_shift_clock.c'
source_filename = "/home/carl/AnghaBench/systemd/src/basic/extr_time-util.c_usec_shift_clock.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@USEC_INFINITY = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @usec_shift_clock(i64 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @USEC_INFINITY, align 8
  %12 = icmp eq i64 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %3
  %14 = load i64, i64* @USEC_INFINITY, align 8
  store i64 %14, i64* %4, align 8
  br label %43

15:                                               ; preds = %3
  %16 = load i32, i32* %6, align 4
  %17 = call i64 @map_clock_id(i32 %16)
  %18 = load i32, i32* %7, align 4
  %19 = call i64 @map_clock_id(i32 %18)
  %20 = icmp eq i64 %17, %19
  br i1 %20, label %21, label %23

21:                                               ; preds = %15
  %22 = load i64, i64* %5, align 8
  store i64 %22, i64* %4, align 8
  br label %43

23:                                               ; preds = %15
  %24 = load i32, i32* %6, align 4
  %25 = call i64 @now(i32 %24)
  store i64 %25, i64* %8, align 8
  %26 = load i32, i32* %7, align 4
  %27 = call i64 @now(i32 %26)
  store i64 %27, i64* %9, align 8
  %28 = load i64, i64* %5, align 8
  %29 = load i64, i64* %8, align 8
  %30 = icmp sgt i64 %28, %29
  br i1 %30, label %31, label %37

31:                                               ; preds = %23
  %32 = load i64, i64* %9, align 8
  %33 = load i64, i64* %5, align 8
  %34 = load i64, i64* %8, align 8
  %35 = call i64 @usec_sub_unsigned(i64 %33, i64 %34)
  %36 = call i64 @usec_add(i64 %32, i64 %35)
  store i64 %36, i64* %4, align 8
  br label %43

37:                                               ; preds = %23
  %38 = load i64, i64* %9, align 8
  %39 = load i64, i64* %8, align 8
  %40 = load i64, i64* %5, align 8
  %41 = call i64 @usec_sub_unsigned(i64 %39, i64 %40)
  %42 = call i64 @usec_sub_unsigned(i64 %38, i64 %41)
  store i64 %42, i64* %4, align 8
  br label %43

43:                                               ; preds = %37, %31, %21, %13
  %44 = load i64, i64* %4, align 8
  ret i64 %44
}

declare dso_local i64 @map_clock_id(i32) #1

declare dso_local i64 @now(i32) #1

declare dso_local i64 @usec_add(i64, i64) #1

declare dso_local i64 @usec_sub_unsigned(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
